# yaam

./: AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  test-file.txt
.github/workflows/: registry-validate.yml
app/: .gitignore  README.md  index.html  mobile.html  package-lock.json  package.json  vite.config.ts  vite.mobile.config.ts  vitest.config.ts
app/src/: App.tsx  addons.ts  context.ts  data.ts  highlight.ts  index.css  main.tsx  master.ts  monitor.ts  native.ts  state-lib.test.ts  state-lib.ts  store.tsx  terminals.ts  types.ts  usage.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: bedrock.rs  chatsearch.rs  lib.rs  main.rs  sessions.rs  setup.rs  util.rs
app/src-tauri/src/commands/: bedrock.rs  fs.rs  git.rs  mod.rs  search.rs  session.rs  state.rs
app/src-tauri/src/core/: bedrock.rs  detect.rs  fs.rs  git.rs  mod.rs  persistence.rs  pty.rs  search.rs  util.rs
app/src-tauri/src/domains/: bedrock.rs  detach.rs  fs.rs  git.rs  icons.rs  mcp.rs  mod.rs  open.rs  preview.rs  remote-app.html  remote-page.html  remote.rs  sandbox.rs  search.rs  secrets.rs  session.rs  state.rs  watch.rs  worktree.rs
app/src/app/: actions-stability.test.tsx  actions.ts  appearance.test.ts  appearance.ts  conductor-actions.ts  conductor-runtime.ts  global-effects.ts
app/src/components/: AddonSource.tsx  AddonView.tsx  AddonsView.tsx  Board.tsx  ChatView.tsx  CommandPalette.tsx  Confirm.test.ts  Confirm.tsx  ContextMenu.tsx  DraftInput.test.tsx  DraftInput.tsx  Drawer.tsx  EntityDialog.test.tsx  EntityDialog.tsx  FileIcon.test.tsx  FileIcon.tsx  ui.tsx  (+22 more)
design/: .thumbnail  Conductor Mobile.dc.html  Conductor.dc.html
docs/: README.md  addons-tutorial.md  addons.md  architecture.md  backend-domains.md  chat-requirements.md  chat-revamp.md  command-authorization.md  communication-protocol.md  design-runtime-2026-07.md  durable-agents.md  engineering-audit-2026-07.md  frontend-domains.md  persistence-schema.md  process-model.md  rearchitecture-hotspots.md  sandbox-audit-2026-07.md  security.md  store-domain-refactor-plan.md  store-refactor-progress-review.md  tui-streaming-and-watcher.md
docs/planning/: README.md  chat-revamp.md  codebase-audit-2026-07.md  rearchitecture-hotspots.md  roadmap-session-first.md  roadmap.md  shadcn-findings.md  store-domain-refactor-plan.md  store-refactor-progress-review.md
registry/: index.json
registry/agents/: news-briefer.agent.json  release-captain.agent.json
scripts/: build-addons.mjs  pack-addon.mjs  validate-registry.mjs
sdk/: README.md  package-lock.json  package.json
sdk/addon-sdk/: package.json  tsconfig.build.json  tsconfig.json
sdk/create-yaam-addon/: index.mjs  package.json
sdk/yaam-addon/: package.json  tsconfig.json
toolkit/: README.md
toolkit/template/: addon.yaml  view.html
(+460 files in other folders)
