[package]
name = "app"
version = "0.3.0"
description = "YAAM — Yet Another Agent Manager: a desktop manager for live coding-agent sessions"
authors = ["xuancanh"]
license = "MIT"
repository = "https://github.com/xuancanh/yaam"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
portable-pty = "0.9.0"
base64 = "0.22.1"
libc = "0.2"
tauri-plugin-http = "2.5.9"
aws-config = "1"
aws-sdk-bedrockruntime = "1"
aws-smithy-types = "1"
tantivy = "0.22.1"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
notify = "8.2.0"
tauri-plugin-notification = "2.3.3"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
if-addrs = "0.14"
tokio-stream = { version = "0.1.18", features = ["sync"] }

# dev-mode dock icon (bare binary, no .app bundle): set NSApplication's icon at runtime
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder", "NSWorkspace", "NSImageRep", "NSBitmapImageRep"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSDictionary", "NSGeometry"] }
